tests/sawn/fixtures/invalid/29_comment_only_document.sawn
// §4: A document consisting only of comments is a parse error
// No entries here
// Just comments